--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wepy-renda",
+  "name": "sbio",
   "version": "1.0.4",
   "description": "[WeUI](https://github.com/weui/weui-wxss) 是一套同微信原生视觉体验一致的基础样式库，由微信官方设计团队为微信内网页和微信小程序量身设计，令用户的使用感知更加统一。 这里是 WeUI 在 WePY 中的使用示例。",
   "main": "dist/app.js",
@@ -21,7 +21,6 @@
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-promise": "^0.6.0",
-    "tim-wx-sdk": "^2.6.3",
     "wepy": "^1.7.2",
     "wepy-async-function": "^1.4.4",
     "wepy-com-toast": "^1.0.1",
